adicionei um parágrafo

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -9,5 +9,6 @@
     <h1>Olá, Mundo!</h1>
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nesciunt, iste saepe molestiae enim nam reiciendis pariatur quisquam tenetur necessitatibus asperiores quos esse voluptas, excepturi hic sunt perferendis, quaerat aspernatur?</p>
+    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere atque excepturi dolorum accusamus cum, beatae, modi inventore quas dolorem soluta blanditiis, et enim ratione quidem ducimus possimus. Cupiditate, cumque ipsam?</p>
 </body>
 </html>
