mudei o arqeuivo Index

--- a/site-exemplo/index.html
+++ b/site-exemplo/index.html
@@ -10,5 +10,6 @@
     <hr>
     <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Accusamus nesciunt, iste saepe molestiae enim nam reiciendis pariatur quisquam tenetur necessitatibus asperiores quos esse voluptas, excepturi hic sunt perferendis, quaerat aspernatur?</p>
     <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Facere atque excepturi dolorum accusamus cum, beatae, modi inventore quas dolorem soluta blanditiis, et enim ratione quidem ducimus possimus. Cupiditate, cumque ipsam?</p>
+    <p>Esse parágrafo foi adicionado dentro do GitHub Desktop para LINUX! &lt;3</p>
 </body>
 </html>
